<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.product_details.ProductDetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/product_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="15dp"
        app:contentPadding="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fridge_product_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="25sp"
                android:text="@string/product_name"/>

            <TextView
                android:id="@+id/fridge_product_details_barcode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_name"
                android:text="@string/bar_code"/>

            <TextView
                android:id="@+id/fridge_product_details_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/fridge_product_details_barcode_label"
                app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_name"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/fridge_product_details_added_datetime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_barcode"
                android:text="@string/added_at"/>

            <TextView
                android:id="@+id/fridge_product_details_added_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/fridge_product_details_added_datetime_label"
                app:layout_constraintTop_toTopOf="@+id/fridge_product_details_added_datetime_label"
                android:layout_marginStart="10dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/product_details_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/amount_of_product_slider_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="25sp"
                android:text="@string/amount_of_product"/>

            <TextView
                android:id="@+id/amount_of_product_slider_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/amount_of_product_slider_label"
                app:layout_constraintTop_toTopOf="@+id/amount_of_product_slider_label"
                android:textSize="25sp"
                android:layout_marginStart="10dp"
                tools:text="10 %"/>

            <SeekBar
                android:id="@+id/amount_of_product_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:max="100"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_of_product_slider_value">
            </SeekBar>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>